--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
       <div class="row">
         <div class="col-xs-12">
           <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary
-            user experience. A website is a tool of expression in the 21st century. I will make sure to deliver all that you are looking to express with your website.</p>
+            user experience. A website is a tool of expression in the 21st century. I aim to deliver a website that expresses you and your company/organization in the best possible direction.</p>
         </div>
       </div>
     </div>
@@ -33,14 +33,14 @@ layout: default
         <div class="wow fadeIn" data-wow-delay=".5s">
           <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="javascript" height="130" width="130"></canvas>
-            <p>Javascript</p>
+            <p>Javascript<br>50%</p>
             <br>
             <script>
               var doughnutData = [{
-                value: 70,
+                value: 50,
                 color: "#FB8946"
               }, {
-                value: 30,
+                value: 50,
                 color: "#4E4E4E"
               }];
               var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
@@ -50,14 +50,14 @@ layout: default
         <div class="wow fadeIn" data-wow-delay=".5s">
           <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="bootstrap" height="130" width="130"></canvas>
-            <p>Bootstrap</p>
+            <p>Bootstrap<br> 80%</p>
             <br>
             <script>
               var doughnutData = [{
-                value: 90,
+                value: 80,
                 color: "#FB8946"
               }, {
-                value: 10,
+                value: 20,
                 color: "#4E4E4E"
               }];
               var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
@@ -67,7 +67,7 @@ layout: default
         <div class="wow fadeIn" data-wow-delay=".5s">
           <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="wordpress" height="130" width="130"></canvas>
-            <p>Wordpress</p>
+            <p>Programming<br>65%</p>
             <br>
             <script>
               var doughnutData = [{
@@ -84,20 +84,25 @@ layout: default
         <div class="wow fadeIn" data-wow-delay=".5s">
           <div class="col-md-3 col-sm-6 col-xs-6 mt">
             <canvas id="photoshop" height="130" width="130"></canvas>
-            <p>Photoshop</p>
+            <p>HTML5/CSS<br>75%</p>
             <br>
             <script>
               var doughnutData = [{
-                value: 50,
+                value: 75,
                 color: "#FB8946"
               }, {
-                value: 50,
+                value: 25,
                 color: "#4E4E4E"
               }];
               var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
             </script>
           </div>
         </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <p>Knowledge and exposure to: Jekyll, Ruby, Ruby on Rails, PHP, MySQL, Sass, Photoshop, SEO, Python, Java, C
+          </div>
       </div>
     </div>
   </div>
@@ -115,10 +120,10 @@ layout: default
       <div class="row">
         <div class="col-xs-12">
           <p>
-            First and foremost, my goal is to make the web better. I aim to make sure it works first and looks cool second. I intend to make sure it isn't cluttered, the focus is put on its well crafted meaningful content, and it doesn't decieve or take advantage
+            First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibality is not a problem for you by delivering a Responsive first site. It's important that a site scales beautifully on any device. The focus is to deliver your content in the best way, shape, or form, and that it doesn't decieve or take advantage
             of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are from or how strong their internet connection is.</p>
           <p>I enjoy making templates, tools, and websites for small and large clients, no matter the business they are in. I like some backend stuff, but front end stuff is my passion.</p>
-          <p>At the end of the day, it all comes down to my love for problem solving. That's why I'm here, doing this, drinking so much coffee. If you have a web problem, let me know, I'd like to help you solve it.
+          <p>At the end of the day, it all comes down to my love of technology and what is possible everyday. If you have a web problem, let me know, I'd like to help you solve it.
           </p>
         </div>
       </div>
