--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,17 +30,20 @@ title: Portfolio
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 This project was crafted for my fraternity at the University of Iowa.
+                <br>
+                <br>
                 <ul>
-                  <li>Site utilizes Bootstrap</li>
-                  <li>Responsive Design</li>
-                  <li>CloudFlare CDN for faster load times</li>
-                  <li>Pictures utilize Couldinary CDN for faster load times of site</li>
+                  <li>It is built using the Bootstrap frame work.</li>
+                  <li>It scales and renders great on all types of devices</li>
+                  <li>To add an extra layer of speed the site utlizies CloudFlare CDN for faster load times</li>
+                  <li>Along with the site, I have opted to use Couldinary for hosting of all images faster load times of site and caching of pictures</li>
                 </ul>
-                Tell about the challenges faced and what you and your team did to solve it.
+
               <br>
               <br>
               <p class="text-center"><b><a href="http://uiowabetas.com">Visit Site</a></b>
               </p>
+
               </div>
             </div>
           </div>
@@ -60,8 +63,21 @@ title: Portfolio
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
-                In order to be eligible for membership, a collegiate student must be a full-time student at the institution of the collegiate entity where he is pursuing membership. Additionally, the interested gentleman must have at least a 2.50 cumulative Grade Point
-                Average (3.0 graduating high school GPA for first semester students).
+                I also, along with a friend, do computer repair and serverices. We aim to offer affordable service and convinience.
+                <br>
+                <br>
+                <ul>
+                  <li>I again opt to use bootstrap for the framework.</li>
+                  <li>I used the JavaScript wow.js plugin to create the animations on the website</li>
+                  <li>Google forms are used to handle customers and offer fast service</li>
+                  <li>Not only can the website be seen in english, but using localize.js service to translate our website into spanish</li>
+                  <li>Simple section design.</li>
+
+                  <br>
+                  <br>
+                  <p class="text-center"><b><a href="http://landrtech.com">Visit Site</a></b>
+                  </p>
+                </ul>
               </div>
             </div>
           </div>
@@ -81,9 +97,12 @@ title: Portfolio
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Sigma Lambda Beta is a social fraternity that promotes the awareness of the Latino culture as well all other cultures that make up the rich diversity found within society. Additionally, Sigma Lambda Beta believes in advancing young, collegiate men to
-                become better men. This organization prides itself in upholding Brotherhood, Scholarship, Community Service, and Cultural Awareness as its principles. Every member of the organization lives out these beliefs in their school work, job,
-                and community.
+                I am always looking for opportunities to build or create something great. If you are looking for not only a web develeoper, but an individual that will go far and beyond to deliver a supieror service get in contact with me.
+                <br>
+                <br>
+                <div class="emaillink text-center">
+                  <a href="mailto:luis.e.aguilar@outlook.com">Email Me</a>
+                </div>                </p>
               </div>
             </div>
           </div>
