--- a/resume/index.html
+++ b/resume/index.html
@@ -19,16 +19,15 @@ layout: default
           </div>
           <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
-              <t>Master of Web Design</t>
-              <br/> St. Patrick University
+              <t>Bachelors of Science</t>
+              <br/> University of Iowa<br>
+              Computer Science
               <br/>
               <i>3 Years Course</i>
             </p>
           </div>
           <div class="col-md-3 col-sm-4">
             <p>
-              <sm>GRADUATING MAY 2014</sm>
-              <br/>
               <imp>
                 <sm>In Progress</sm>
               </imp>
@@ -39,15 +38,16 @@ layout: default
         <div class="row">
           <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
             <p>
-              <t>Degree of Web Developer</t>
-              <br/> Hastings University
+              <t>Associates of Science</t>
+              <br/> Kishwaukee College<br>
+              Malta, IL
               <br/>
               <i>2 Years Course</i>
             </p>
           </div>
           <div class="col-md-3 col-sm-4">
             <p>
-              <sm>JUNE 2012</sm>
+              <sm>MAY 2011</sm>
             </p>
           </div>
         </div>
@@ -67,19 +67,22 @@ layout: default
           </div>
           <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
-              <t>Front-end Developer</t>
-              <br/> Black Tie Corp.
+              <t>Guest Service Representative</t>
+              <br/> Clarion Highlander Hotel
               <br/>
             </p>
             <p>
-              <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-                book.
+              <more>Performed a combination of duties mainly related, but not limited, to
+check-in and check-out of guests which contributes to an overall
+positive experience. Assisted guests with common services and answered any general
+questions. Demonstrated ability to answer inquiries about hotel services,
+shopping, dining and travel directions.
               </more>
             </p>
           </div>
           <div class="col-md-3 col-sm-4">
             <p>
-              <sm>AUGUST 2012 - CURRENT</sm>
+              <sm>AUGUST 2011 - CURRENT</sm>
             </p>
           </div>
         </div>
@@ -87,19 +90,21 @@ layout: default
         <div class="row">
           <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
             <p>
-              <t>Web Designer - Intern</t>
-              <br/> Onassis Ltd.
+              <t>Guest Service Representative</t>
+              <br/> Rochelle Comfort Inn & Suites<br>
+              Rochelle, IL
               <br/>
             </p>
             <p>
-              <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-                book.
+              <more>Welcome and register guests and offer them services and room rates. Handle guest check in and checkouts professionally and in a
+welcoming and specialized manner. Represented the Hotel in regard to guest complaints and situations
+that require instant action. Maintain the hotel’s high standard of service and hospitality
               </more>
             </p>
           </div>
           <div class="col-md-3 col-sm-4">
             <p>
-              <sm>JUNE 2010 - JULY 2012</sm>
+              <sm>JUNE 2006 - JULY 2011</sm>
             </p>
           </div>
         </div>
@@ -115,37 +120,21 @@ layout: default
       <div class="boxresume">
         <div class="row">
           <div class="col-sm-2">
-            <h5 class="text-center">AWARDS</h5>
+            <h5 class="text-center">QUALIFICATIONS</h5>
           </div>
           <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
-              <t>Best Web Design</t>
-              <br/> Black Tie Site
-              <br/>
-            </p>
+              <more>
+                Proficient in writing and speaking Spanish<br>
+              In-depth knowledge of using computers<br>
+              Well organized individual<br>
+              Able to work varied hours, including weekends and holidays<br>
+          </more>
+            <p>
           </div>
           <div class="col-md-3 col-sm-4">
             <p>
-              <sm>NOVEMBER 2013</sm>
-            </p>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
-            <p>
-              <t>Designer of the Year</t>
-              <br/> Awwwards Site
-            </p>
-            <p>
-              <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-                book.
-              </more>
-            </p>
-          </div>
-          <div class="col-md-3 col-sm-4">
-            <p>
-              <sm>2013</sm>
+
             </p>
           </div>
         </div>
