--- a/resume/index.html
+++ b/resume/index.html
@@ -125,10 +125,10 @@ that require instant action. Maintain the hotel’s high standard of service and
           <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
               <more>
-                Proficient in writing and speaking Spanish<br>
-              In-depth knowledge of using computers<br>
-              Well organized individual<br>
-              Able to work varied hours, including weekends and holidays<br>
+                Proficient in writing and speaking Spanish<br><br>
+              In-depth knowledge of using computers<br><br>
+              Well organized individual<br><br>
+              Able to work varied hours, including weekends and holidays<br><br>
           </more>
             <p>
           </div>
