--- a/resume/index.html
+++ b/resume/index.html
@@ -20,8 +20,8 @@ layout: default
           <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
               <t>Bachelors of Science</t>
-              <br/> University of Iowa<br>
-              Computer Science
+              <br/> University of Iowa
+              <br> Computer Science
               <br/>
               <i>3 Years Course</i>
             </p>
@@ -39,8 +39,8 @@ layout: default
           <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
             <p>
               <t>Associates of Science</t>
-              <br/> Kishwaukee College<br>
-              Malta, IL
+              <br/> Kishwaukee College
+              <br> Malta, IL
               <br/>
               <i>2 Years Course</i>
             </p>
@@ -55,9 +55,9 @@ layout: default
 
       <div class="boxresume">
         <div class="row">
-      <hr class="line">
-  </div>
-</div>
+          <hr class="line">
+        </div>
+      </div>
 
       <!--WORK DESCRIPTION -->
       <div class="boxresume">
@@ -72,11 +72,8 @@ layout: default
               <br/>
             </p>
             <p>
-              <more>Performed a combination of duties mainly related, but not limited, to
-check-in and check-out of guests which contributes to an overall
-positive experience. Assisted guests with common services and answered any general
-questions. Demonstrated ability to answer inquiries about hotel services,
-shopping, dining and travel directions.
+              <more>Performed a combination of duties mainly related, but not limited, to check-in and check-out of guests which contributes to an overall positive experience. Assisted guests with common services and answered any general questions. Demonstrated
+                ability to answer inquiries about hotel services, shopping, dining and travel directions.
               </more>
             </p>
           </div>
@@ -91,14 +88,13 @@ shopping, dining and travel directions.
           <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
             <p>
               <t>Guest Service Representative</t>
-              <br/> Rochelle Comfort Inn & Suites<br>
-              Rochelle, IL
+              <br/> Rochelle Comfort Inn & Suites
+              <br> Rochelle, IL
               <br/>
             </p>
             <p>
-              <more>Welcome and register guests and offer them services and room rates. Handle guest check in and checkouts professionally and in a
-welcoming and specialized manner. Represented the Hotel in regard to guest complaints and situations
-that require instant action. Maintain the hotel’s high standard of service and hospitality
+              <more>Welcome and register guests and offer them services and room rates. Handle guest check in and checkouts professionally and in a welcoming and specialized manner. Represented the Hotel in regard to guest complaints and situations that require
+                instant action. Maintain the hotel’s high standard of service and hospitality
               </more>
             </p>
           </div>
@@ -112,9 +108,9 @@ that require instant action. Maintain the hotel’s high standard of service and
 
       <div class="boxresume">
         <div class="row">
-      <hr class="line">
-  </div>
-</div>
+          <hr class="line">
+        </div>
+      </div>
 
       <!--AWARDS DESCRIPTION -->
       <div class="boxresume">
@@ -125,12 +121,17 @@ that require instant action. Maintain the hotel’s high standard of service and
           <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
             <p>
               <more>
-                Proficient in writing and speaking Spanish<br><br>
-              In-depth knowledge of using computers<br><br>
-              Well organized individual<br><br>
-              Able to work varied hours, including weekends and holidays<br><br>
-          </more>
-            <p>
+                Proficient in writing and speaking Spanish
+                <br>
+                <br> In-depth knowledge of using computers
+                <br>
+                <br> Well organized individual
+                <br>
+                <br> Able to work varied hours, including weekends and holidays
+                <br>
+                <br>
+              </more>
+              <p>
           </div>
           <div class="col-md-3 col-sm-4">
             <p>
@@ -138,6 +139,9 @@ that require instant action. Maintain the hotel’s high standard of service and
             </p>
           </div>
         </div>
+      </div>
+      <div class="emaillink text-center">
+        <a href="https://www.dropbox.com/s/ge4i4o50z88rx06/Luis_E_Aguilar_Resume.pdf?dl=0">PDF Resume</a>
       </div>
     </div>
   </div>
