--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ layout: default
       <div class="row">
         <div class="col-xs-12">
           <p>
-            First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibality is not a problem for you by delivering a Responsive first site. It's important that a site scales beautifully on any device. The focus is to deliver your content in the best way, shape, or form, and that it doesn't decieve or take advantage
+            First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibility is not a problem for you by delivering a Responsive first site. It's important that a site scales beautifully on any device. The focus is to deliver your content in the best way, shape, or form, and that it doesn't decieve or take advantage
             of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are from or how strong their internet connection is.</p>
           <p>I enjoy making templates, tools, and websites for small and large clients, no matter the business they are in. I like some backend stuff, but front end stuff is my passion.</p>
           <p>At the end of the day, it all comes down to my love of technology and what is possible everyday. If you have a web problem, let me know, I'd like to help you solve it.
