--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,7 +15,7 @@ title: Portfolio
 
       <div class="row">
 
-        <div class="col-lg-4 col-md-6">
+        <div class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-heading text-center" role="tab" id="headingOne">
               <h4 class="panel-title">
@@ -49,41 +49,9 @@ title: Portfolio
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-heading text-center" role="tab" id="headingTwo">
-              <h4 class="panel-title">
-                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                LandrTech
-                 <br>
-                  <br>
-                  <img class="img-responsive img-edit" src="{{ "/img/portfolio/landrtech.jpg" | prepend: site.baseurl }}" alt="">
-                </a>
-              </h4>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-              <div class="panel-body">
-                I also, along with a friend, do computer repair and serverices. We aim to offer affordable service and convinience.
-                <br>
-                <br>
-                <ul>
-                  <li>I again opt to use bootstrap for the framework.</li>
-                  <li>I used the JavaScript wow.js plugin to create the animations on the website</li>
-                  <li>Google forms are used to handle customers and offer fast service</li>
-                  <li>Not only can the website be seen in english, but using localize.js service to translate our website into spanish</li>
-                  <li>Simple section design.</li>
 
-                  <br>
-                  <br>
-                  <p class="text-center"><b><a href="http://landrtech.com">Visit Site</a></b>
-                  </p>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <div class="col-lg-4 col-lg-offset-0 col-md-offset-6 col-md-6">
+        <div class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-heading text-center" role="tab" id="headingThree">
               <h4 class="panel-title text-center">
