--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,7 +15,7 @@ title: Portfolio
 
       <div class="row">
 
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-heading text-center" role="tab" id="headingOne">
               <h4 class="panel-title">
@@ -48,10 +48,14 @@ title: Portfolio
             </div>
           </div>
         </div>
+        <div class="col-md-2">
+        </div>
 
 
 
-        <div class="col-md-6">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-heading text-center" role="tab" id="headingThree">
               <h4 class="panel-title text-center">
