--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,7 +15,7 @@ title: Portfolio
 
       <div class="row">
 
-        <div class="col-md-5">
+        <div class="col-md-5 sm-col-12">
           <div class="panel panel-default">
             <div class="panel-heading text-center" role="tab" id="headingOne">
               <h4 class="panel-title">
@@ -48,14 +48,14 @@ title: Portfolio
             </div>
           </div>
         </div>
-        <div class="col-md-1">
+        <div class="col-md-1 sm-col-0">
         </div>
 
 
 
-        <div class="col-md-1">
+        <div class="col-md-1 sm-col-0">
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 sm-col-12">
           <div class="panel panel-default">
             <div class="panel-heading text-center" role="tab" id="headingThree">
               <h4 class="panel-title text-center">
