--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,28 +20,27 @@ title: Portfolio
             <div class="panel-heading text-center" role="tab" id="headingOne">
               <h4 class="panel-title">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        UiowaBetas
+                        Landr Tech
                         <br>
                         <br>
-                        <img class="img-responsive" src="{{ "/img/portfolio/uiowabetas.jpg" | prepend: site.baseurl }}" alt="">
+                        <img class="img-responsive" src="{{ "/img/portfolio/landrtech.jpg" | prepend: site.baseurl }}" alt="">
                       </a>
               </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                This project was crafted for my fraternity at the University of Iowa.
+                I am also co-owner of a small side business dealing with consumer electronics as well as mobile electronics.
                 <br>
                 <br>
                 <ul>
-                  <li>It is built using the Bootstrap frame work.</li>
+                  <li>It is built using the Bootstrap v4 alpha frame work.</li>
                   <li>It scales and renders great on all types of devices</li>
                   <li>To add an extra layer of speed the site utlizies CloudFlare CDN for faster load times</li>
-                  <li>Along with the site, I have opted to use Couldinary for hosting of all images faster load times of site and caching of pictures</li>
                 </ul>
 
               <br>
               <br>
-              <p class="text-center"><b><a href="http://uiowabetas.com">Visit Site</a></b>
+              <p class="text-center"><b><a href="http://landrtech.com">Visit Site</a></b>
               </p>
 
               </div>
