--- a/index.html
+++ b/index.html
@@ -1,132 +1,172 @@
 ---
 layout: default
 ---
-<div class="wow fadeInUp">
-  <div class="box">
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-xs-12">
-        <h3>About Me</h3>
-        <hr class="star-primary">
-      </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary
-            user experience. A website is a tool of expression in the 21st century. I aim to deliver a website that expresses you and your company/organization in the best possible direction.</p>
+<div class="w3-content w3-margin-top w3-margin-bottom">
+    <div class="w3-row-padding">
+        <div class="w3-container w3-card-4 w3-teal w3-margin-bottom w3-center w3-padding-16">
+            <img src="{{ "/assets/img/photo.jpg" | prepend: site.baseurl }}" class="w3-circle" style="width:200px" alt="Profile Picture">
+            <h1 class="w3-text-white">Luis E. Aguilar</h1>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="wow fadeInUp">
-  <div class="box text-center">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12">
-        <h3>Skills</h3>
-        <hr class="star-primary">
-      </div>
-      </div>
-      <div class="row">
-        <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-md-3 col-sm-6 col-xs-6 mt">
-            <canvas id="javascript" height="130" width="130"></canvas>
-            <p>Javascript<br>70%</p>
+        <div class="w3-container w3-white w3-center w3-card-2 w3-padding-16 w3-margin-bottom">
+            <a class="w3-text-teal w3-small" target="_blank" href="https://www.github.com/{{ site.github_username }}"><i class="fa fa-github fa-3x"></i></a>
+            <a class="w3-text-teal w3-small w3-margin-left" target="_blank" href="https://www.twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter fa-3x"></i></a>
+            <a class="w3-text-teal w3-small w3-margin-left" target="_blank" href="https://www.linkedin.com/{{ site.linkedin_username }}"><i class="fa fa-linkedin fa-3x"></i></a>
             <br>
-            <script>
-              var doughnutData = [{
-                value: 70,
-                color: "#FB8946"
-              }, {
-                value: 30,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
-            </script>
-          </div>
+            <a class="w3-btn w3-teal w3-text-white w3-margin-top" href="mailto:luis.e.aguilar@outlook.com">Email Me</a>
         </div>
-        <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-md-3 col-sm-6 col-xs-6 mt">
-            <canvas id="bootstrap" height="130" width="130"></canvas>
-            <p>Bootstrap<br> 100%</p>
-            <br>
-            <script>
-              var doughnutData = [{
-                value: 100,
-                color: "#FB8946"
-              }, {
-                value: 0,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
-            </script>
-          </div>
-        </div>
-        <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-md-3 col-sm-6 col-xs-6 mt">
-            <canvas id="wordpress" height="130" width="130"></canvas>
-            <p>Programming<br>65%</p>
-            <br>
-            <script>
-              var doughnutData = [{
-                value: 65,
-                color: "#FB8946"
-              }, {
-                value: 35,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
-            </script>
-          </div>
-        </div>
-        <div class="wow fadeIn" data-wow-delay=".5s">
-          <div class="col-md-3 col-sm-6 col-xs-6 mt">
-            <canvas id="photoshop" height="130" width="130"></canvas>
-            <p>HTML5/CSS<br>85%</p>
-            <br>
-            <script>
-              var doughnutData = [{
-                value: 85,
-                color: "#FB8946"
-              }, {
-                value: 15,
-                color: "#4E4E4E"
-              }];
-              var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
-            </script>
-          </div>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-xs-12">
-          <p>Knowledge and exposure to: Jekyll, Ruby, Ruby on Rails, PHP, MySQL, Sass, Photoshop, SEO, Python, Java, C
-          </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="wow fadeInUp">
-  <div class="box">
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-xs-12">
-          <h3>Philosophy</h3>
-          <hr class="star-primary">
+        <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-question fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About Me</h2>
+            <div class="w3-container">
+                <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an
+                    extoardinary user experience. A website is a tool of expression in the 21st century. I aim to deliver a website that expresses you and your company/organization in the best possible direction.</p>
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <p>
-            First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibility is not a problem for you by delivering a Responsive first site. It's important that a site scales beautifully on any device. The focus is to deliver your content in the best way, shape, or form, and that it doesn't decieve or take advantage
-            of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are from or how strong their internet connection is.</p>
-          <p>I enjoy making websites of any type using a variety of different tools. I enjoy learning and understanding the backend, but front end stuff is my passion.</p>
-          <p>At the end of the day, it all comes down to my love of technology and what is possible everyday. If you have a web problem, let me know, I'd like to help you solve it.
-          </p>
+
+        <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Philosophy</h2>
+            <div class="w3-container">
+                <p>
+                    First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibility is not a problem for you by delivering a Responsive first site. It's important that a site scales beautifully on any device. The focus is to
+                    deliver your content in the best way, shape, or form, and that it doesn't decieve or take advantage of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are
+                    from or how strong their internet connection is.</p>
+                <p>I enjoy making websites of any type using a variety of different tools. I enjoy learning and understanding the backend, but front end stuff is my passion.</p>
+                <p>At the end of the day, it all comes down to my love of technology and what is possible everyday. If you have a web problem, let me know, I'd like to help you solve it.
+                </p>
+            </div>
         </div>
-      </div>
+
+        <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-folder fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Portolio</h2>
+            <div class="w3-row-padding">
+                <div class="w3-panel w3-col m6">
+                    <div class="w3-container w3-dark-grey w3-center">
+                        <h5 class="w3-text-white"><b><a href="http://landrtech.com" target="_blank">Landr Tech</a></b></h5>
+                    </div>
+                    <a href="http://landrtech.com" target="_blank">
+                        <img src="{{ "/assets/img/landrtech.jpg" | prepend: site.baseurl }}" alt="Landrtech" style="width:100%">
+                    </a>
+                    <div class="w3-container w3-teal">
+                        <p>Computer & Mobile Device Repair Website.</p>
+                        <p>Website utilizes a plugin to handle online appointments for customers. Built using HTML/CSS/JS along with the Bootstrap framework. Respnsive on all types of devices. Utilizes CloudFlare for added response and speed.</p>
+                    </div>
+                </div>
+                <div class="w3-panel w3-col m6">
+                    <img src="{{ "/assets/img/placeholder.jpg" | prepend: site.baseurl }}" alt="Place Holder" style="width:100%">
+                    <div class="w3-container w3-teal">
+                        <p>I am always looking for opportunities to build or create something great. If you are looking for not only a web develeoper, but an individual that will go far and beyond to deliver a supieror service get in contact with me.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-cog fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skills</h2>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Spoken Languages</b></h5>
+                <ul>
+                    <li>
+                        <p>Fluent in writing and speaking Spanish</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Web Technologies</b></h5>
+                <ul class="w3-half">
+                    <li>
+                        <p>Git</p>
+                    </li>
+                    <li>
+                        <p>Bootstrap & other frameworks</p>
+                    </li>
+                    <li>
+                        <p>Firebase</p>
+                    </li>
+                </ul>
+                <ul class="w3-half">
+                    <li>
+                        <p>Vue.js</p>
+                    </li>
+                    <li>
+                        <p>WordPress</p>
+                    </li>
+                    <li>
+                        <p>Google Cloud & AWS</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Programming Languages</b></h5>
+                <ul class="w3-half">
+                    <li>
+                        <p>HTML</p>
+                    </li>
+                    <li>
+                        <p>CSS & SASS</p>
+                    </li>
+                    <li>
+                        <p>Javascript & JQuery</p>
+                    </li>
+                </ul>
+                <ul class="w3-half">
+                    <li>
+                        <p>C</p>
+                    </li>
+                    <li>
+                        <p>Python</p>
+                    </li>
+                    <li>
+                        <p>PHP & MySQL</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="w3-container w3-center">
+                <p>
+                    In the ever changing landscape of web development, I take pride in having a broad range of tools & knowledge at my disposale.
+                </p>
+            </div>
+        </div>
+
+        <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Front Desk Superviser</b><br><i>Clarion Highlander Hotel</i></h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - May 2016</h6>
+                <p>Co-Lead four front desk Associates with guidance, direction, and assistance with front desk duties. Manage phone questions when guest call to hotel. Including booking rooms, issues with stay, issues with bill, and general hotel questions.
+                </p>
+                <hr>
+            </div>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Service Technician</b><br><i>Digital Doc</i></h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2015 - Sep 2015</h6>
+                <p>Used technical knowledge to solve a vast variety of issues within the customer’s electronic devices. Practiced exemplary customer service when explaining in person and over the phone the issues and overall diagnosis of devices.
+                </p>
+                <hr>
+            </div>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Guest Service Representative</b><br><i>Clarion Highlander Hotel</i></h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2011 - Jan 2015</h6>
+                <p>Assisted guests with common hotel services and answered any general questions. Booked rooms in person and over the phone by demonstrating a high standard of customer service and knowledge of hotel services. Handle guest check in and checkouts
+                    professionally and in a welcoming and specialized manner. Maintain the hotel’s standard of service and hospitality.
+                </p>
+            </div>
+        </div>
+
+        <div class="w3-container w3-card-2 w3-white">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Northern Illinois University</b></h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2017</h6>
+                <p>Focus on Computer Science</p>
+                <hr>
+            </div>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Kishwaukee College</b></h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2011</h6>
+                <p>Associates of Science</p>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
