--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="w3-content w3-margin-top w3-margin-bottom">
     <div class="w3-row-padding">
         <div class="w3-container w3-card-4 w3-teal w3-margin-bottom w3-center w3-padding-16">
-            <img src="{{ "/assets/img/photo.jpg" | prepend: site.baseurl }}" class="w3-circle" style="width:200px" alt="Profile Picture">
+            <img src="{{ " /assets/img/photo.jpg " | prepend: site.baseurl }}" class="w3-circle" style="width:200px" alt="Profile Picture">
             <h1 class="w3-text-white">Luis E. Aguilar</h1>
         </div>
 
@@ -17,22 +17,21 @@ layout: default
         </div>
 
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-question fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About Me</h2>
-            <div class="w3-container">
-                <p>I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment, wow! It's quite the extoardinary tool, so as a web developer I take great pride in delivering, not only an amazing website, but an
-                    extoardinary user experience. A website is a tool of expression in the 21st century. I aim to deliver a website that expresses you and your company/organization in the best possible direction.</p>
-            </div>
-        </div>
-
-        <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Philosophy</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>My Philosophy</h2>
             <div class="w3-container">
                 <p>
-                    First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibility is not a problem for you by delivering a Responsive first site. It's important that a site scales beautifully on any device. The focus is to
+                    I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment! It's quite the extoardinary tool and as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary user experience.
+                    A website is a tool of expression in the 21st century. I aim to deliver a website that expresses you and your company/organization in the best possible direction.</p>
+                <p>
+                    First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibility is not a problem for you by delivering a Responsive first site. It's important that a site scale beautifully on any device. The focus is to
                     deliver your content in the best way, shape, or form, and that it doesn't decieve or take advantage of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are
-                    from or how strong their internet connection is.</p>
-                <p>I enjoy making websites of any type using a variety of different tools. I enjoy learning and understanding the backend, but front end stuff is my passion.</p>
-                <p>At the end of the day, it all comes down to my love of technology and what is possible everyday. If you have a web problem, let me know, I'd like to help you solve it.
+                    from or how strong their internet connection is.
+                </p>
+                <p>
+                    I enjoy making websites of any type using a variety of different tools. I enjoy learning and understanding the backend, but front end is my passion.
+                </p>
+                <p>
+                    At the end of the day, it all comes down to my love of technology and what is possible everyday. If you have a web problem, let me know, I'd like to help you solve it.
                 </p>
             </div>
         </div>
@@ -45,7 +44,7 @@ layout: default
                         <h5 class="w3-text-white"><b><a href="http://landrtech.com" target="_blank">Landr Tech</a></b></h5>
                     </div>
                     <a href="http://landrtech.com" target="_blank">
-                        <img src="{{ "/assets/img/landrtech.jpg" | prepend: site.baseurl }}" alt="Landrtech" style="width:100%">
+                        <img src="{{ " /assets/img/landrtech.jpg " | prepend: site.baseurl }}" alt="Landrtech" style="width:100%">
                     </a>
                     <div class="w3-container w3-teal">
                         <p>Computer & Mobile Device Repair Website.</p>
@@ -53,7 +52,7 @@ layout: default
                     </div>
                 </div>
                 <div class="w3-panel w3-col m6">
-                    <img src="{{ "/assets/img/placeholder.jpg" | prepend: site.baseurl }}" alt="Place Holder" style="width:100%">
+                    <img src="{{ " /assets/img/placeholder.jpg " | prepend: site.baseurl }}" alt="Place Holder" style="width:100%">
                     <div class="w3-container w3-teal">
                         <p>I am always looking for opportunities to build or create something great. If you are looking for not only a web develeoper, but an individual that will go far and beyond to deliver a supieror service get in contact with me.
                         </p>
@@ -82,7 +81,7 @@ layout: default
                         <p>Bootstrap & other frameworks</p>
                     </li>
                     <li>
-                        <p>Firebase</p>
+                        <p>WordPress</p>
                     </li>
                 </ul>
                 <ul class="w3-half">
@@ -90,7 +89,7 @@ layout: default
                         <p>Vue.js</p>
                     </li>
                     <li>
-                        <p>WordPress</p>
+                        <p>Firebase</p>
                     </li>
                     <li>
                         <p>Google Cloud & AWS</p>
@@ -132,25 +131,55 @@ layout: default
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-                <h5 class="w3-opacity"><b>Front Desk Superviser</b><br><i>Clarion Highlander Hotel</i></h5>
+                <h5 class="w3-opacity"><b>Front Desk Superviser</b><br><i>Clarion Highlander Hotel</i> - Iowa City, IA</h5>
                 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - May 2016</h6>
-                <p>Co-Lead four front desk Associates with guidance, direction, and assistance with front desk duties. Manage phone questions when guest call to hotel. Including booking rooms, issues with stay, issues with bill, and general hotel questions.
-                </p>
+                <ul>
+                    <li>
+                        <p>Supervise and monitor activities of all Front Desk staff making sure they adhere to the Hotel’s standards of excellence and to the Hotel’s policies and procedures outlined in the employee handbook, coaching, training and correcting
+                            where needed.</p>
+                    </li>
+                    <li>
+                        <p> Act as manager on duty for the hotel in the absence of the Assistant Manager or General Manager dealing with complaints, problem solving, disturbances, special requests and any other issues that may arise.</p>
+                    </li>
+                    <li>
+                        <p>Provide Front Desk Staff with necessary training and support as directed by management.</p>
+                    </li>
+                </ul>
                 <hr>
             </div>
             <div class="w3-container">
-                <h5 class="w3-opacity"><b>Service Technician</b><br><i>Digital Doc</i></h5>
+                <h5 class="w3-opacity"><b>Service Technician</b><br><i>Digital Doc</i> - Coralville, IA</h5>
                 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2015 - Sep 2015</h6>
-                <p>Used technical knowledge to solve a vast variety of issues within the customer’s electronic devices. Practiced exemplary customer service when explaining in person and over the phone the issues and overall diagnosis of devices.
-                </p>
+                <ul>
+                    <li>
+                        <p>I listened and comprehended issues as stated by customers where I performed routine inspection, testing, diagnosis, and repair on a wide range of devices.</p>
+                    </li>
+                    <li>
+                        <p>I carefully communicated back to customers of diagnosis and repairs. It was imperative to properly communicate in a clear and concise manner so anybody could properly understand what was done.</p>
+                    </li>
+                    <li>
+                        <p>I accurately documented repairs and parts information on repair tracking software and in point of sale computer tracking system. This included the tracking of parts used or needed to be ordered. It was important to operate in a
+                            timely manner.</p>
+                    </li>
+                </ul>
                 <hr>
             </div>
             <div class="w3-container">
-                <h5 class="w3-opacity"><b>Guest Service Representative</b><br><i>Clarion Highlander Hotel</i></h5>
+                <h5 class="w3-opacity"><b>Guest Service Representative</b><br><i>Clarion Highlander Hotel</i> - Iowa City, IA</h5>
                 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2011 - Jan 2015</h6>
-                <p>Assisted guests with common hotel services and answered any general questions. Booked rooms in person and over the phone by demonstrating a high standard of customer service and knowledge of hotel services. Handle guest check in and checkouts
-                    professionally and in a welcoming and specialized manner. Maintain the hotel’s standard of service and hospitality.
-                </p>
+                <ul>
+                    <li>
+                        <p>As the first contact, I provide exceptional customer service to all hotel guests, making their stay as comfortable and accommodating as possible. Everything from sell and upselling accommodations to resolving any guest requests
+                            was my duty.</p>
+                    </li>
+                    <li>
+                        <p>In assisting guests, it was out duty to extend our customer service knowledge to guests that called directly to our property. From guiding guests in making reservations to relaying guest to the right department when transferring
+                            or taking messages from directly.</p>
+                    </li>
+                    <li>
+                        <p>Maintained a well-kept and organized area. It was important to relay any information to the next shift or to management, so there was a smooth transition from one shift to another.</p>
+                    </li>
+                </ul>
             </div>
         </div>
 
@@ -158,7 +187,7 @@ layout: default
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
                 <h5 class="w3-opacity"><b>Northern Illinois University</b></h5>
-                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2017</h6>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Begin June 2017</h6>
                 <p>Focus on Computer Science</p>
                 <hr>
             </div>
