--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
     <div class="w3-row-padding">
         <div class="w3-container w3-card-4 w3-teal w3-margin-bottom w3-center w3-padding-16">
             <img src="{{ " /assets/img/photo.jpg " | prepend: site.baseurl }}" class="w3-circle" style="width:200px" alt="Profile Picture">
-            <h1 class="w3-text-white">Luis E. Aguilar</h1>
+            <h1 class="w3-text-white"><b>Luis E. Aguilar</b></h1>
         </div>
 
         <div class="w3-container w3-white w3-center w3-card-2 w3-padding-16 w3-margin-bottom">
