--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ layout: default
             <div class="w3-row-padding">
                 <div class="w3-panel w3-col m6">
                     <div class="w3-container w3-dark-grey w3-center">
-                        <h5 class="w3-text-white"><b><a href="http://landrtech.com" target="_blank">Landr Tech</a></b></h5>
+                        <h5 class="w3-text-white"><b><a href="https://landrtech.com" target="_blank">Landr Tech</a></b></h5>
                     </div>
-                    <a href="http://landrtech.com" target="_blank">
+                    <a href="https://landrtech.com" target="_blank">
                         <img src="{{ " /assets/img/landrtech.jpg " | prepend: site.baseurl }}" alt="Landrtech" style="width:100%">
                     </a>
                     <div class="w3-container w3-teal">
